--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.1
 APScheduler==3.11.0
 blinker==1.9.0
 certifi==2025.1.31
@@ -5,6 +6,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 Flask==3.1.0
 Flask-Login==0.6.3
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==23.0.0
