--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.9.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+colorama==0.4.6
 Flask==3.1.0
 Flask-Login==0.6.3
 Flask-Migrate==4.1.0
@@ -20,6 +21,7 @@ packaging==24.2
 requests==2.32.3
 SQLAlchemy==2.0.38
 typing_extensions==4.12.2
+tzdata==2025.1
 tzlocal==5.3.1
 urllib3==2.3.0
 Werkzeug==3.1.3
